# holoptycho

./: .dockerignore  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  NOTES_mosaic_skew_race.md  README.md  pixi.toml  pyproject.toml  set-ld-path.sh  start.sh  start_editable.sh
.github/workflows/: build-container.yml  (+1 more)
Holoptycho/: live_compare_viewer.py  live_simulation.py  mosaic_stitch.py  preprocess.py  ptycho_holo.py  run_live_compare_view.sh  streaming_recon.py  vit_inference.py
eiger_test/: pipeline_preprocess.py  pipeline_ptycho.py  pipeline_ptycho_old_testing.py  pipeline_source.py  run_ptycho.py  zmq_client02_bl_test.py
holoptycho/: __init__.py  datasource.py  engine_probe.py  live_compare_viewer.py  live_simulation.py  liverecon_utils.py  mosaic_canvas.py  mosaic_stitch.py  orientation.py  preprocess.py  ptycho_holo.py  streaming_recon.py  tiled_writer.py  vit_inference.py
podman_dir/: build_container  build_engine.sh  build_engine_interactive.sh  launch_holoscan_gui.sh  pixi.toml  run_container
scripts/: check_zmq.py  compare_positions.py  config_from_tiled.py  detect_orientation.py  dump_scan_h5.py  env-replay.sh  offline_engine_test.py  offline_epie.py  replay_from_tiled.py  slurm_start_holoptycho.sh
tests/: test_api.py  test_auto_center.py  test_cli.py  test_detect_orientation.py  test_dump_scan_h5.py  test_engine_probe.py  test_iterative_orientation.py  test_liverecon_utils.py  test_mosaic_canvas.py  test_mosaic_orient.py  test_preprocess_geometry.py  test_smoke.py  test_streaming_recon.py  test_vit_session_contract.py
zmq_proxy/: proxy.py
(+15 files in other folders)
