[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "holoptycho"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["holoptycho"]

[tool.pytest.ini_options]
testpaths = ["tests"]
