[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "holoptycho"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "tiled[client]>=0.1",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
hp = "holoptycho.cli.main:app"

[tool.setuptools]
packages = ["holoptycho", "holoptycho.server", "holoptycho.cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
